--- a/_columns/The_Big_Picture/zh-cn/2024-11-06.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-06.md
@@ -10,54 +10,44 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-Indexes rallied to record highs Wednesday in a stock market session marked with superlatives that greeted unambiguous election victories for former President Donald Trump and the Republican Party.  
-周三，指数在股市交易中反弹至历史新高，以最高级为标志，迎接前总统唐纳德·特朗普和共和党的明确选举胜利。
+Indexes rallied to record highs Wednesday in a stock market session marked with superlatives that greeted unambiguous election victories for former President Donald Trump and the Republican Party.  
 
 
-For starters, the Nasdaq composite, S&P 500 and Dow Jones Industrial Average rose to all-time highs as the Dow and S&P made their best one-day gains since November 2022. For the Nasdaq, it was the best day since Feb. 22 of this year. The Dow surged 3.6% and the S&P 2.5%.  
-首先，纳斯达克综合指数、标准普尔 500 指数和道琼斯工业平均指数升至历史新高，道琼斯指数和标准普尔指数创下 2022 年 11 月以来的最佳单日涨幅。对于纳斯达克来说，这是自今年 2 月 22 日以来最好的一天。道琼斯指数飙升 3.6%，标准普尔指数飙升 2.5%。
+For starters, the Nasdaq composite, S&P 500 and Dow Jones Industrial Average rose to all-time highs as the Dow and S&P made their best one-day gains since November 2022. For the Nasdaq, it was the best day since Feb. 22 of this year. The Dow surged 3.6% and the S&P 2.5%.  
 
 
 
 
-Stock Market Records Broken打破股市记录
----------------------------------
+Stock Market Records Broken
+---------------------------
 
 
-The stock market made history, too: The S&P 500 and Russell 2000 had their best day after Election Day ever recorded. The Nasdaq's 3% gain was the largest since the November 2020 election, according to Dow Jones Market Data.  
-股市也创造了历史：标准普尔 500 指数和罗素 2000 指数在选举日之后创下了有史以来最好的一天。根据道琼斯市场数据，纳斯达克指数 3% 的涨幅是自 2020 年 11 月大选以来的最大涨幅。
+The stock market made history, too: The S&P 500 and Russell 2000 had their best day after Election Day ever recorded. The Nasdaq's 3% gain was the largest since the November 2020 election, according to Dow Jones Market Data.  
 
 
-Volume was the highest since the Nov. 20 triple witching session. Trading swelled 68% on the NYSE and rose 15% on the Nasdaq, making Wednesday's index gains analogous to a [follow-through rally confirmation](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/). It effectively ended a soft patch that clouded the stock market heading into Election Day.  
-交易量是自 11 月 20 日三重巫术会议以来的最高水平。纽约证券交易所的交易上涨了 68%，纳斯达克的交易上涨了 15%，这使得周三的指数上涨类似于[后续的反弹确认](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/)。它有效地结束了在选举日之前给股市蒙上阴影的疲软时期。
+Volume was the highest since the Nov. 20 triple witching session. Trading swelled 68% on the NYSE and rose 15% on the Nasdaq, making Wednesday's index gains analogous to a [follow-through rally confirmation](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/). It effectively ended a soft patch that clouded the stock market heading into Election Day.  
 
 
-Breadth was positive but not as much as the index gains would have you think. Advancers outnumbered decliners on the NYSE by an 8-to-5 ratio and by about 9-to-5 on the Nasdaq, according to FactSet.  
-广度是积极的，但并不像你想象的指数上涨那么多。根据 FactSet 的数据，纽约证券交易所的上涨者数量超过下跌者的数量，比例为 8 比 5，纳斯达克的比率约为 9 比 5。
+Breadth was positive but not as much as the index gains would have you think. Advancers outnumbered decliners on the NYSE by an 8-to-5 ratio and by about 9-to-5 on the Nasdaq, according to FactSet.  
 
 
-Still, gains were broad. Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) jumped 2.4%. First Trust Nasdaq 100 Equal Weight ([QQEW](https://research.investors.com/quote.aspx?symbol=QQEW)) vaulted 2.4%. Both ETFs broke out above [trendlines](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/?refcode=BBB-04262022-2-B-9:04:2022:2Q:NewsLetter:Email:BBB-04262022:na:na:na:na:26:10:2:B:9&j=1566189&sfmc_sub=172274927&l=222_HTML&u=20328680&mid=100016628&jb=1) drawn from their October highs.  
-尽管如此，收益是广泛的。景顺标准普尔 500 等权重 ETF （[RSP）](https://research.investors.com/quote.aspx?symbol=RSP) 上涨 2.4%。First Trust 纳斯达克 100 等权重指数 （[QQEW）](https://research.investors.com/quote.aspx?symbol=QQEW) 上涨 2.4%。这两只 ETF 都突破了从 10 月高点绘制的[趋势线](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/?refcode=BBB-04262022-2-B-9:04:2022:2Q:NewsLetter:Email:BBB-04262022:na:na:na:na:26:10:2:B:9&j=1566189&sfmc_sub=172274927&l=222_HTML&u=20328680&mid=100016628&jb=1)。
+Still, gains were broad. Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) jumped 2.4%. First Trust Nasdaq 100 Equal Weight ([QQEW](https://research.investors.com/quote.aspx?symbol=QQEW)) vaulted 2.4%. Both ETFs broke out above [trendlines](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/?refcode=BBB-04262022-2-B-9:04:2022:2Q:NewsLetter:Email:BBB-04262022:na:na:na:na:26:10:2:B:9&j=1566189&sfmc_sub=172274927&l=222_HTML&u=20328680&mid=100016628&jb=1) drawn from their October highs.  
 
 
-![](https://www.investors.com/wp-content/uploads/2024/11/MP110624-179x300.jpg)The iShares Russell 1000 Growth ETF ([IWF](https://research.investors.com/quote.aspx?symbol=IWF)) and iShares Russell 1000 Value ([IWD](https://research.investors.com/quote.aspx?symbol=IWD)) both rose more than 2.5%. The Russell surged 5.8%.  
-iShares Russell 1000 Growth ETF （[IWF](https://research.investors.com/quote.aspx?symbol=IWF)） 和 iShares Russell 1000 Value （[IWD](https://research.investors.com/quote.aspx?symbol=IWD)） 均上涨超过 2.5%。罗素指数飙升 5.8%。
+![](https://www.investors.com/wp-content/uploads/2024/11/MP110624-179x300.jpg)The iShares Russell 1000 Growth ETF ([IWF](https://research.investors.com/quote.aspx?symbol=IWF)) and iShares Russell 1000 Value ([IWD](https://research.investors.com/quote.aspx?symbol=IWD)) both rose more than 2.5%. The Russell surged 5.8%.  
 
 
-Market Outlook Improves 市场前景改善
-------------------------------
+Market Outlook Improves
+-----------------------
 
 
-Wednesday's sharp gains wiped away the Nasdaq's Oct. 7 [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/), leaving only the high-volume declines of Oct. 15 and 17 as markers of institutional selling. The S&P 500 still carries four distribution days.  
-周三的大幅上涨抹去了纳斯达克 10 月 7 日[的发行日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)，只剩下 10 月 15 日和 17 日的高成交量下跌作为机构抛售的标志。标准普尔 500 指数仍然有四个派发日。
+Wednesday's sharp gains wiped away the Nasdaq's Oct. 7 [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/), leaving only the high-volume declines of Oct. 15 and 17 as markers of institutional selling. The S&P 500 still carries four distribution days.  
 
 
-With the market outlook turning more bullish, IBD raised its recommended market exposure from 60%-80% to 80%-100%. Investors could look at the various sectors that rallied Wednesday to add to their portfolios.  
-随着市场前景变得更加乐观，IBD 将其建议的市场敞口从 60%-80% 提高到 80%-100%。投资者可以关注周三上涨以增加投资组合的各个板块。
+With the market outlook turning more bullish, IBD raised its recommended market exposure from 60%-80% to 80%-100%. Investors could look at the various sectors that rallied Wednesday to add to their portfolios.  
 
 
-Financials, industrials and energy — sectors that may see less in terms of government mandates — led the stock market with gains of 3.8% to 6.1%.  
-金融、工业和能源等受政府监管影响较小的板块以 3.8% 至 6.1% 的涨幅领涨股市。
+Financials, industrials and energy — sectors that may see less in terms of government mandates — led the stock market with gains of 3.8% to 6.1%.  
 
 
 Consumer Discretionary Select Sector SPDR ([XLY](https://research.investors.com/quote.aspx?symbol=XLY)) climbed more than 3%. But the defensive consumer staples, real estate and utilities fell Wednesday. Utilities also compared unfavorably to rising Treasury yields.  
@@ -85,55 +75,44 @@ Of course, the so-called Trump Trade came out a big winner. **Trump Media & Tech
 With Trump favoring cryptocurrencies, [bitcoin prices climbed to a record high](https://www.investors.com/news/bitcoin-price-outlook-2024-us-election-trump-kamala-harris-nov-6/) late Wednesday.  
 
 
-**Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) gapped up nearly 15% in double its usual volume. It regained a 264.86 buy point and topped an alternative entry at 273.54. While Trump and Congress may scale back electric-vehicle goals, CEO Elon Musk may have a role in the next administration. Some shareholders, though, worry it may become a distraction for Musk.  
-**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 跳空上涨近 15%，是平时的两倍。它重新获得了 264.86 的买入点，并在 273.54 点突破了另一个入口。虽然特朗普和国会可能会缩减电动汽车目标，但首席执行官埃隆·马斯克 （Elon Musk） 可能会在下一届政府中发挥作用。不过，一些股东担心这可能会分散马斯克的注意力。
+**Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) gapped up nearly 15% in double its usual volume. It regained a 264.86 buy point and topped an alternative entry at 273.54. While Trump and Congress may scale back electric-vehicle goals, CEO Elon Musk may have a role in the next administration. Some shareholders, though, worry it may become a distraction for Musk.  
 
 
-Treasury Yields Spike 美国国债收益率飙升
--------------------------------
+Treasury Yields Spike
+---------------------
 
 
-The 10 year Treasury yield rose nearly 14 basis points to 4.425%, the highest since July 2. Yet, the increase in borrowing costs didn't hurt the stock market.  
-10 年期美国国债收益率上涨近 14 个基点至 4.425%，为 7 月 2 日以来的最高水平。然而，借贷成本的增加并没有损害股市。
+The 10 year Treasury yield rose nearly 14 basis points to 4.425%, the highest since July 2. Yet, the increase in borrowing costs didn't hurt the stock market.  
 
 
-The long-dated 30-year bond shed 15 basis points to 4.6% as bond traders worry of rising U.S. budget deficits.  
-由于债券交易员担心美国预算赤字上升，30 年期长期债券下跌 15 个基点至 4.6%。
+The long-dated 30-year bond shed 15 basis points to 4.6% as bond traders worry of rising U.S. budget deficits.  
 
 
-A changing of the guard in Washington also made losers of other sectors and asset classes.  
-华盛顿的换岗也使其他行业和资产类别的亏损。
+A changing of the guard in Washington also made losers of other sectors and asset classes.  
 
 
-IBD's solar energy industry group was Wednesday's worst performing, down 11.5%.  
-IBD 的太阳能行业组是周三表现最差的板块，下跌 11.5%。
+IBD's solar energy industry group was Wednesday's worst performing, down 11.5%.  
 
 
-The German DAX fell 1.1% and STOXX Europe 600 Index lost 0.5%. Europe faces the prospect of backing Ukraine's war against Russia with less aid from the U.S. The threat of more import tariffs also appeared to hurt overseas stock markets.  
-德国 DAX 指数下跌 1.1%，斯托克欧洲 600 指数下跌 0.5%。欧洲面临着以美国较少援助来支持乌克兰对俄罗斯的战争的前景。提高进口关税的威胁似乎也损害了海外股市。
+The German DAX fell 1.1% and STOXX Europe 600 Index lost 0.5%. Europe faces the prospect of backing Ukraine's war against Russia with less aid from the U.S. The threat of more import tariffs also appeared to hurt overseas stock markets.  
 
 
-[View General Market Indicators chart page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_110624.pdf)
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_110624.pdf) 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[The Four Pillars Of The IBD Methodology  
-IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/) 
 
 
-[Risk Management In The Stock Market: How Much Money To Invest  
-股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros  
-IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A) 
 
 
- [After Trump Win, Is Market Starting A New Bull Run? Here's What To Do  
-特朗普获胜后，市场是否开始了新的牛市？这是怎么做的](https://www.investors.com/market-trend/stock-market-today/dow-jones-surges-trump-win-signals-bull-run/)
+ [After Trump Win, Is Market Starting A New Bull Run? Here's What To Do](https://www.investors.com/market-trend/stock-market-today/dow-jones-surges-trump-win-signals-bull-run/) 
 
 
 
