--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-07.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-07.md
@@ -13,7 +13,7 @@ author: HARRISON MILLER
 
 
 **Deckers Brands** ([DECK](https://research.investors.com/quote.aspx?symbol=DECK)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Thursday as shares of the Hoka maker test a buy point. Footwear stocks swung generally higher as **Under Armor** ([UAA](https://research.investors.com/quote.aspx?symbol=UAA)) rallied 31% on earnings.  
-**Deckers Brands** （[DECK）](https://research.investors.com/quote.aspx?symbol=DECK) 是周四的 [IBD 每日股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为 Hoka 制造商的股票测试了一个买入点。鞋类股普遍走高，Under **Armor** （[UAA](https://research.investors.com/quote.aspx?symbol=UAA)） 因收益上涨 31%。
+**Deckers Brands** （[DECK）](https://research.investors.com/quote.aspx?symbol=DECK) 是周四的 [IBD 每日股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为 Hoka 制造商的股票测试了一个买入点。鞋类股普遍走高，**Under Armor** （[UAA](https://research.investors.com/quote.aspx?symbol=UAA)） 因收益上涨 31%。
 
 
 Deckers, the seller behind the popular Hoka and Ugg shoe brands, has received praise from analysts as it rides momentum into the holiday shopping season. The company on Oct. 24 reported a 39% increase for Q2 2025 earnings to $1.59 per share, beating FactSet estimates of $1.24 per share. Revenue jumped 20% to $1.31 billion, while analysts expected $1.2 billion.  
@@ -42,36 +42,45 @@ KeyBanc called the report a "resounding beat on all fronts," noting upside poten
 KeyBanc 称该报告“在各个方面都取得了响亮的成绩”，并指出基于 Deckers 新产品发布和“强大的国际跑道”的上行潜力。该公司将 DECK 股票的目标价从 180 上调至 190，并维持对该股的增持评级。
 
 
-Telsey Advisory lifted its price target on Deckers stock following its results, noting the company outperformed expectations across the board. Sales growth nearly doubled market expectations, led by strong gains at Hoka and Ugg, the firm added. Deckers continues to deliver results in an uncertain macro environment, which demonstrates its strong market position, healthy brand portfolio and ability to drive long-term growth, Telsey wrote. The firm lifted its price target on DECK stock to 190 from 183 on the results and kept an outperform rating. Telsey in late December also added the Hoka maker to its top picks for the 2024 holiday season among footwear stocks, along with **Birkenstock** ([BIRK](https://research.investors.com/quote.aspx?symbol=BIRK)).  
+Telsey Advisory lifted its price target on Deckers stock following its results, noting the company outperformed expectations across the board. Sales growth nearly doubled market expectations, led by strong gains at Hoka and Ugg, the firm added. Deckers continues to deliver results in an uncertain macro environment, which demonstrates its strong market position, healthy brand portfolio and ability to drive long-term growth, Telsey wrote. The firm lifted its price target on DECK stock to 190 from 183 on the results and kept an outperform rating. Telsey in late December also added the Hoka maker to its top picks for the 2024 holiday season among footwear stocks, along with **Birkenstock** ([BIRK](https://research.investors.com/quote.aspx?symbol=BIRK)).  
+Telsey Advisory 在业绩公布后上调了 Deckers 股票的目标价，并指出该公司的整体表现均超出预期。该公司补充说，销售额增长几乎是市场预期的两倍，其中 Hoka 和 Ugg 的强劲增长引领了这一增长。Telsey 写道，Deckers 在不确定的宏观环境中继续取得成果，这表明其强大的市场地位、健康的品牌组合和推动长期增长的能力。该公司将 DECK 股票的目标价从 183 上调至 190，并保持跑赢大盘评级。Telsey 在 12 月下旬还将 Hoka 制造商与 **Birkenstock** （[BIRK）](https://research.investors.com/quote.aspx?symbol=BIRK) 一起列入 2024 年假日季鞋类股票的首选。
 
 
-Deckers Stock
--------------
+Deckers Stock Deckers 股票
+------------------------
 
 
 
-DECK stock surged 4.5% Thursday to trade around a 172.57 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) for a 22-week [cup-with-handle base](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/).  
+DECK stock surged 4.5% Thursday to trade around a 172.57 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) for a 22-week [cup-with-handle base](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/).  
+DECK 股价周四飙升 4.5%，在 172.57 [买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)附近交易，为 22 周[带手柄杯子底部](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/)。
 
 
-Shares of the Hoka maker have rallied more than 28% from an August low and are up almost 55% in 2024.  
+Shares of the Hoka maker have rallied more than 28% from an August low and are up almost 55% in 2024.  
+这家 Hoka 制造商的股价从 8 月份的低点上涨了 28% 以上，并在 2024 年上涨了近 55%。
 
 
-Deckers hit a record high of 184.48 on June 3 before sliding into a consolidation.  
+Deckers hit a record high of 184.48 on June 3 before sliding into a consolidation.  
+Deckers 在 6 月 3 日创下 184.48 的历史新高，然后滑入盘整。
 
 
-Under Armor vaulted more than 31% after its quarterly results, propelling shoe stocks higher. Under Armor posted a 58% increase in earnings to 30 cents per share, outpacing estimates for 20 cents. Revenue fell almost 11% to $1.399 billion, but still edged out expectations for $1.386 billion. The company also lifted its earnings guidance ahead of forecasts as it makes progress on its restructuring plan.  
+Under Armor vaulted more than 31% after its quarterly results, propelling shoe stocks higher. Under Armor posted a 58% increase in earnings to 30 cents per share, outpacing estimates for 20 cents. Revenue fell almost 11% to $1.399 billion, but still edged out expectations for $1.386 billion. The company also lifted its earnings guidance ahead of forecasts as it makes progress on its restructuring plan.  
+Under Armor 在季度业绩公布后上涨超过 31%，推动鞋类股走高。Under Armor 公布的收益增长 58% 至每股 30 美分，高于 20 美分的预期。收入下降近 11% 至 13.99 亿美元，但仍略高于预期的 13.86 亿美元。该公司还提前了盈利指引，因为其重组计划取得了进展。
 
 
-Among other footwear stocks, **On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)) popped 5% and bounced off its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/).  
+Among other footwear stocks, **On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)) popped 5% and bounced off its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/).  
+在其他鞋类股中，**On Holding** （[ONON）](https://research.investors.com/quote.aspx?symbol=ONON) 上涨 5%，并从 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)反弹。
 
 
-On Holding reports its Q3 results on Nov. 12. FactSet expects flat earnings year over year at 22 cents per share on nearly 31% revenue growth to $705 million.  
+On Holding reports its Q3 results on Nov. 12. FactSet expects flat earnings year over year at 22 cents per share on nearly 31% revenue growth to $705 million.  
+On Holding 于 11 月 12 日报告了其第三季度业绩。FactSet 预计每股收益为 22 美分，收入增长近 31% 至 7.05 亿美元。
 
 
-**Crocs** ([CROX](https://research.investors.com/quote.aspx?symbol=CROX)) climbed 1.2% while Birkenstock rose 2.2%.  
+**Crocs** ([CROX](https://research.investors.com/quote.aspx?symbol=CROX)) climbed 1.2% while Birkenstock rose 2.2%.  
+**卡骆驰** （[CROX](https://research.investors.com/quote.aspx?symbol=CROX)） 上涨 1.2%，而勃肯上涨 2.2%。
 
 
-*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)* 
+*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)  
+您可以在 X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison) 上关注 Harrison Miller 以获取更多股票新闻和更新*
 
 
 **YOU MAY ALSO LIKE: 您可能还喜欢：**
